Closed Bug 318669 Opened 19 years ago Closed 19 years ago

[BEOS] bustage from fix to bug 241758

Categories

(Core Graveyard :: RDF, defect)

x86
BeOS
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: doug, Assigned: doug)

Details

Attachments

(2 files)

User-Agent: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.9a1) Gecko/20051201 Firefox/1.6a1 Build Identifier: Mozilla/5.0 (BeOS; U; BeOS BePC; en-US; rv:1.9a1) Gecko/20051201 Firefox/1.6a1 nsFileSystemDataSource.cpp no longer builds under BeOS. Reproducible: Always Steps to Reproduce: 1.attempt to build Thunderbird 2.wait for error message 3. Actual Results: build fails - error messages included as attachment. Expected Results: build succeeds
this appears to be a result of changes committed in bug 241758 earlier today.
Component: General → Build Config
Product: Thunderbird → Core
Version: unspecified → Trunk
sorry about the confusing updates - I'm still getting the hang of bugzilla. The problem is impacting the trunk, core RDF 1.9a1
Component: Build Config → RDF
type for netPositiveDir was changed fron char* to nsCString and definition moved from *.cpp to *.h. Changes to fix. http://lxr.mozilla.org/seamonkey/source/rdf/datasource/src/nsFileSystemDataSource.cpp#1426 must look like: if (strstr(uri, netPositiveDir.get()) != 0) http://lxr.mozilla.org/seamonkey/source/rdf/datasource/src/nsFileSystemDataSource.cpp#1599 must look like: if (!netPositiveDir.IsEmpty()) and http://lxr.mozilla.org/seamonkey/source/rdf/datasource/src/nsFileSystemDataSource.cpp#1601 if (strstr(uri, netPositiveDir.get()) != 0)
fyysik, this almost fixed it. Still one problem with line 1601: /boot/home/develop/mozilla/rdf/datasource/src/nsFileSystemDataSource.cpp:1601: cannot convert `uri' from type `nsCString' to type `const char *'
ok, so 1601 must be: if (strstr(uri.get(), netPositiveDir.get()) != 0) as "uri" is defined in differently from first case. actually, looks like it is better to use some of nsCString own Compare() methods here instead strstr but that if some nsString guru gives advise on that. Also, please add here: http://lxr.mozilla.org/seamonkey/source/rdf/datasource/src/nsFileSystemDataSource.h#50 XP_BEOS case
looks like the last changed fixed it. I'm doing a full build now. If there are no other complications, I'll submit a patch.
(In reply to comment #6) > Also, please add here: > http://lxr.mozilla.org/seamonkey/source/rdf/datasource/src/nsFileSystemDataSource.h#50 > > XP_BEOS > case > I saw that and thought it might be necessary. I'll change it.
Comment on attachment 204794 [details] [diff] [review] fixes BeOS bustage fyysik, patch incorporates changes to .cpp and .h. Builds clean and runs OK. Please review. May also need SR?
Attachment #204794 - Flags: review?(sergei_d)
Comment on attachment 204794 [details] [diff] [review] fixes BeOS bustage r=sergei_d
Attachment #204794 - Flags: review?(sergei_d) → review+
Attachment #204794 - Flags: review+
Ok, lazy question: Are we sure netpositiveDir is never null for BeOS?
(In reply to comment #12) > Ok, lazy question: > Are we sure netpositiveDir is never null for BeOS? > I'm not completely sure. Is netpositiveDir getting its non-null value around line 220 of nsFileSystemDataSource.cpp? Also, assuming we're OK, who can commit?
Assignee: mscott → doug
Status: UNCONFIRMED → NEW
Ever confirmed: true
nsCString::get will never return null btw, it'd be good if you reassigned bugs to default owner/qa when changing components... fixed on trunk Checking in rdf/datasource/src/nsFileSystemDataSource.cpp; /cvsroot/mozilla/rdf/datasource/src/nsFileSystemDataSource.cpp,v <-- nsFileSystemDataSource.cpp new revision: 1.142; previous revision: 1.141 done Checking in rdf/datasource/src/nsFileSystemDataSource.h; /cvsroot/mozilla/rdf/datasource/src/nsFileSystemDataSource.h,v <-- nsFileSystemDataSource.h new revision: 1.13; previous revision: 1.12 done
Status: NEW → RESOLVED
Closed: 19 years ago
QA Contact: general → rdf
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha
I also appreciate the comment about changing owners. My ignorance of proper use of bugzilla resources explains my actions, but it's not an excuse. I'm learning as I go. thank you for your help, biesi!
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: