bug 318669 fixing beos bustage from bug 241758 patch by Doug Shelton <doug@sheltonfamily.org> r=sergei_d,bsmedberg