rdf/datasource/src/nsFileSystemDataSource.h
@@ -47,7 +47,7 @@
 #include "nsCOMPtr.h"
 #include "nsString.h"
 
-#if defined(XP_UNIX) || defined(XP_OS2) || defined(XP_WIN)
+#if defined(XP_UNIX) || defined(XP_OS2) || defined(XP_WIN) || defined(XP_BEOS)
 #define USE_NC_EXTENSION
 #endif
 
